--- a/continuum-core-it/pom.xml
+++ b/continuum-core-it/pom.xml
@@ -1,13 +1,13 @@
-<project>
+<?xml version="1.0" encoding="UTF-8"?><project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
   <parent>
     <artifactId>continuum-parent</artifactId>
     <groupId>org.apache.maven.continuum</groupId>
-    <version>1.0.3-SNAPSHOT</version>
+    <version>1.0.3</version>
   </parent>
   <modelVersion>4.0.0</modelVersion>
   <artifactId>continuum-core-it</artifactId>
   <name>Continuum Core Integration Test</name>
-  <version>1.0.3-SNAPSHOT</version>
+  <version>1.0.3</version>
   <build>
     <plugins>
       <plugin>
