--- a/continuum-model/pom.xml
+++ b/continuum-model/pom.xml
@@ -1,19 +1,19 @@
-<project>
+<?xml version="1.0" encoding="UTF-8"?><project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
   <parent>
     <artifactId>continuum-parent</artifactId>
     <groupId>org.apache.maven.continuum</groupId>
-    <version>1.0.3-SNAPSHOT</version>
+    <version>1.0.3</version>
   </parent>
   <modelVersion>4.0.0</modelVersion>
   <artifactId>continuum-model</artifactId>
   <name>Continuum Model</name>
-  <version>1.0.3-SNAPSHOT</version>
+  <version>1.0.3</version>
   <build>
     <plugins>
       <plugin>
         <groupId>org.codehaus.modello</groupId>
         <artifactId>modello-maven-plugin</artifactId>
-        <version>1.0-alpha-9-SNAPSHOT</version>
+        <version>1.0-alpha-9</version>
         <executions>
           <execution>
             <goals>
@@ -31,7 +31,7 @@
       <plugin>
         <groupId>org.codehaus.mojo</groupId>
         <artifactId>jpox-maven-plugin</artifactId>
-        <version>1.0.2-SNAPSHOT</version>
+        <version>1.0.2</version>
         <executions>
           <execution>
             <goals>
