--- a/continuum-rpc-client/pom.xml
+++ b/continuum-rpc-client/pom.xml
@@ -2,12 +2,12 @@
   <parent>
     <artifactId>continuum-parent</artifactId>
     <groupId>org.apache.maven.continuum</groupId>
-    <version>1.0.3</version>
+    <version>1.0.4-SNAPSHOT</version>
   </parent>
   <modelVersion>4.0.0</modelVersion>
   <artifactId>continuum-rpc-client</artifactId>
   <name>Continuum client XML-RPC</name>
-  <version>1.0.3</version>
+  <version>1.0.4-SNAPSHOT</version>
   <description>XML-RPC client code for accessing Apache Continuum servers</description>
   <build>
     <plugins>
