--- a/continuum-test/pom.xml
+++ b/continuum-test/pom.xml
@@ -2,12 +2,12 @@
   <parent>
     <artifactId>continuum-parent</artifactId>
     <groupId>org.apache.maven.continuum</groupId>
-    <version>1.0.3</version>
+    <version>1.0.4-SNAPSHOT</version>
   </parent>
   <modelVersion>4.0.0</modelVersion>
   <artifactId>continuum-test</artifactId>
   <name>Continuum Test</name>
-  <version>1.0.3</version>
+  <version>1.0.4-SNAPSHOT</version>
   <dependencies>
     <dependency>
       <groupId>junit</groupId>
