--- a/gbuild-agent/pom.xml
+++ b/gbuild-agent/pom.xml
@@ -46,7 +46,12 @@
             <groupId>org.apache.geronimo.specs</groupId>
             <artifactId>geronimo-j2ee-management_1.0_spec</artifactId>
         </dependency>
-    
+        <dependency>
+            <groupId>org.codehaus.swizzle</groupId>
+            <artifactId>swizzle-stream</artifactId>
+            <version>1.0</version>
+        </dependency>
+
     <!-- ActiveMQ deps -->
         <dependency>
             <groupId>incubator-activemq</groupId>
