Upgrade to the proposed ActiveMQ-4.0-RC3
git-svn-id: https://svn.apache.org/repos/asf/geronimo/gbuild/trunk@396814 13f79535-47bb-0310-9956-ffa450edef68

--- a/pom.xml
+++ b/pom.xml
@@ -152,6 +152,12 @@
             <layout>legacy</layout>
         </repository>
         <repository>
+            <id>dblevins</id>
+            <name>Tmp Apache Repository</name>
+            <url>http://people.apache.org/~dblevins/maven</url>
+            <layout>legacy</layout>
+        </repository>
+        <repository>
             <releases>
                 <enabled>false</enabled>
             </releases>
@@ -226,7 +232,7 @@
             <dependency>
                 <groupId>incubator-activemq</groupId>
                 <artifactId>activemq-core</artifactId>
-                <version>4.0-M4</version>
+                <version>4.0-RC3</version>
             </dependency>
             <dependency>
                 <groupId>org.apache.geronimo.specs</groupId>
