Fix for http://issues.apache.org/jira/browse/GBUILD-2 Builds will now be requeued and marked with a list of hosts that have pulled and failed the build.
git-svn-id: https://svn.apache.org/repos/asf/geronimo/gbuild/trunk@397693 13f79535-47bb-0310-9956-ffa450edef68

--- a/pom.xml
+++ b/pom.xml
@@ -141,6 +141,7 @@
         <module>gbuild-agent</module>
         <module>gbuild-agent-web</module>
         <module>gbuild-report</module>
+        <module>extensions</module>
         <module>gbuild-agent-application</module>
     </modules>
 
