o use the production values so that we can build everything using mvn clean install from the top
git-svn-id: https://svn.apache.org/repos/asf/maven/continuum/branches/continuum-1.0.x@399044 13f79535-47bb-0310-9956-ffa450edef68

--- a/continuum-plexus-application/pom.xml
+++ b/continuum-plexus-application/pom.xml
@@ -40,10 +40,10 @@
         <configuration>
           <applicationConfiguration>src/conf/application.xml</applicationConfiguration>
           <configurationsDirectory>src/conf</configurationsDirectory>
-          <configurationProperties>${appProperties}</configurationProperties>
+          <configurationProperties>app.properties</configurationProperties>
           <applicationName>continuum</applicationName>
           <runtimeConfiguration>src/test/conf/test-runtime-configuration.xml</runtimeConfiguration>
-          <runtimeConfigurationProperties>${appProperties}</runtimeConfigurationProperties>
+          <runtimeConfigurationProperties>app.properties</runtimeConfigurationProperties>
           <runtimePath>target/plexus-test-runtime</runtimePath>
         </configuration>
       </plugin>
