--- a/continuum-webapp/pom.xml
+++ b/continuum-webapp/pom.xml
@@ -150,5 +150,10 @@
       <artifactId>wagon-ssh</artifactId>
       <scope>runtime</scope>
     </dependency>
+    <dependency>
+      <groupId>org.acegisecurity</groupId>
+      <artifactId>acegi-security</artifactId>
+      <scope>runtime</scope>
+    </dependency>
   </dependencies>
 </project>
