--- a/continuum-webapp/src/main/webapp/WEB-INF/web.xml
+++ b/continuum-webapp/src/main/webapp/WEB-INF/web.xml
@@ -18,30 +18,19 @@
     <param-value>localization/Continuum</param-value>
   </context-param>
 
-  <!--
-    - Location of the XML file that defines the root application context
-    - Applied by ContextLoaderListener.
-    -->
-  <context-param>
-    <param-name>contextConfigLocation</param-name>
-    <param-value>
-      /WEB-INF/applicationContext-acegi-security.xml
-    </param-value>
-  </context-param>
-
-  <filter>
-    <filter-name>Acegi Filter Chain Proxy</filter-name>
-    <filter-class>org.acegisecurity.util.FilterToBeanProxy</filter-class>
-    <init-param>
-      <param-name>targetClass</param-name>
-      <param-value>org.acegisecurity.util.FilterChainProxy</param-value>
-    </init-param>
-  </filter>
-
   <!-- this should be before the webwork filter -->
   <filter>
     <filter-name>plexus</filter-name>
     <filter-class>org.codehaus.plexus.xwork.PlexusFilter</filter-class>
+  </filter>
+
+  <filter>
+    <filter-name>Acegi Filter Chain Proxy</filter-name>
+    <filter-class>org.apache.maven.continuum.web.filter.FilterToComponentProxy</filter-class>
+    <init-param>
+      <param-name>component</param-name>
+      <param-value>org.acegisecurity.util.FilterChainProxy</param-value>
+    </init-param>
   </filter>
 
   <filter>
@@ -59,14 +48,14 @@
     <filter-class>com.opensymphony.webwork.dispatcher.FilterDispatcher</filter-class>
   </filter>
 
-  <filter-mapping>
-    <filter-name>Acegi Filter Chain Proxy</filter-name>
-    <url-pattern>/*</url-pattern>
-  </filter-mapping>
-
   <!-- this should be before the webwork filter -->
   <filter-mapping>
     <filter-name>plexus</filter-name>
+    <url-pattern>/*</url-pattern>
+  </filter-mapping>
+
+  <filter-mapping>
+    <filter-name>Acegi Filter Chain Proxy</filter-name>
     <url-pattern>/*</url-pattern>
   </filter-mapping>
 
@@ -84,15 +73,6 @@
     <filter-name>webwork</filter-name>
     <url-pattern>/*</url-pattern>
   </filter-mapping>
-
-  <!--
-    - Loads the root application context of this web app at startup.
-    - The application context is then available via 
-    - WebApplicationContextUtils.getWebApplicationContext(servletContext).
-    -->
-  <listener>
-    <listener-class>org.springframework.web.context.ContextLoaderListener</listener-class>
-  </listener>
 
   <listener>
     <listener-class>org.codehaus.plexus.xwork.PlexusLifecycleListener</listener-class>
