--- a/pom.xml
+++ b/pom.xml
@@ -79,6 +79,14 @@
         <enabled>false</enabled>
       </releases>
     </repository>
+    <repository>
+      <id>acegi-snapshot</id>
+      <name>Acegi snapshot repository</name>
+      <url>http://acegisecurity.sourceforge.net/repository/snapshots</url>
+      <releases>
+        <enabled>false</enabled>
+      </releases>
+    </repository>
   </repositories>
   <pluginRepositories>
     <pluginRepository>
@@ -407,7 +415,7 @@
       <dependency>
         <groupId>org.acegisecurity</groupId>
         <artifactId>acegi-security</artifactId>
-        <version>1.0.1</version>
+        <version>1.1-SNAPSHOT</version>
         <scope>runtime</scope>
       </dependency>
     </dependencies>
