[CONTINUUM-764] Added continuum-security-acegi module
git-svn-id: https://svn.apache.org/repos/asf/maven/continuum/branches/continuum-acegi@420787 13f79535-47bb-0310-9956-ffa450edef68

--- a/continuum-webapp/pom.xml
+++ b/continuum-webapp/pom.xml
@@ -152,5 +152,9 @@
       <artifactId>wagon-ssh</artifactId>
       <scope>runtime</scope>
     </dependency>
+    <dependency>
+      <groupId>org.apache.maven.continuum</groupId>
+      <artifactId>continuum-security-acegi</artifactId>
+    </dependency>
   </dependencies>
 </project>
