--- a/continuum-security/continuum-security-acegi/pom.xml
+++ b/continuum-security/continuum-security-acegi/pom.xml
@@ -25,5 +25,9 @@
       <groupId>org.apache.maven.continuum</groupId>
       <artifactId>continuum-model</artifactId>
     </dependency>
+    <dependency>
+      <groupId>org.apache.maven.continuum</groupId>
+      <artifactId>continuum-store</artifactId>
+    </dependency>
   </dependencies>
 </project>
