--- a/continuum-webapp/pom.xml
+++ b/continuum-webapp/pom.xml
@@ -63,6 +63,32 @@
           <contextPath>/</contextPath>
         </configuration>
       </plugin>
+      <plugin>
+        <groupId>org.codehaus.mojo</groupId>
+        <artifactId>aspectj-maven-plugin</artifactId>
+        <configuration>
+          <weaveDependencies>
+            <weaveDependency>
+              <groupId>org.apache.maven.continuum</groupId>
+              <artifactId>continuum-core</artifactId>
+            </weaveDependency>
+          </weaveDependencies>
+          <aspectLibraries>
+            <aspectLibrary>
+              <groupId>org.apache.maven.continuum</groupId>
+              <artifactId>continuum-security-acegi</artifactId>
+            </aspectLibrary>
+          </aspectLibraries>
+        </configuration>
+        <executions>
+          <execution>
+            <goals>
+              <goal>compile</goal>
+              <goal>test-compile</goal>
+            </goals>
+          </execution>
+        </executions>
+      </plugin>
     </plugins>
   </build>
   <dependencies>
