--- a/continuum-webapp/pom.xml
+++ b/continuum-webapp/pom.xml
@@ -116,6 +116,17 @@
       <artifactId>continuum-core</artifactId>
     </dependency>
     <dependency>
+      <groupId>org.apache.maven.shared.user</groupId>
+      <artifactId>maven-user-webapp</artifactId>
+      <type>war</type>
+      <version>1.0-SNAPSHOT</version>
+    </dependency>
+    <dependency>
+      <groupId>org.apache.maven.shared.user</groupId>
+      <artifactId>maven-user-controller</artifactId>
+      <version>1.0-SNAPSHOT</version>
+    </dependency>
+    <dependency>
       <groupId>org.codehaus.plexus</groupId>
       <artifactId>plexus-xwork-integration</artifactId>
       <version>1.0-alpha-2-SNAPSHOT</version>
