--- a/continuum-security/continuum-security-acegi/pom.xml
+++ b/continuum-security/continuum-security-acegi/pom.xml
@@ -27,6 +27,11 @@
       <artifactId>continuum-core</artifactId>
     </dependency>
     <dependency>
+      <groupId>commons-dbcp</groupId>
+      <artifactId>commons-dbcp</artifactId>
+      <version>1.2.1</version>
+    </dependency>
+    <dependency>
       <groupId>org.acegisecurity</groupId>
       <artifactId>acegi-security</artifactId>
       <version>1.1-SNAPSHOT</version>
