Add acl initializer
git-svn-id: https://svn.apache.org/repos/asf/maven/continuum/branches/continuum-acegi@433479 13f79535-47bb-0310-9956-ffa450edef68

--- a/continuum-webapp/pom.xml
+++ b/continuum-webapp/pom.xml
@@ -223,6 +223,12 @@
       <scope>runtime</scope>
     </dependency>
     <dependency>
+      <groupId>commons-dbcp</groupId>
+      <artifactId>commons-dbcp</artifactId>
+      <version>1.2.1</version>
+      <scope>runtime</scope>
+    </dependency>
+    <dependency>
       <groupId>org.apache.maven.continuum</groupId>
       <artifactId>continuum-security-acegi</artifactId>
       <exclusions>
