--- a/continuum-webapp/pom.xml
+++ b/continuum-webapp/pom.xml
@@ -97,6 +97,7 @@
     </plugins>
   </build>
   <dependencies>
+<!-- TODO currently broken
     <dependency>
       <groupId>org.apache.maven.shared.user</groupId>
       <artifactId>maven-user-webapp</artifactId>
@@ -108,6 +109,7 @@
       <artifactId>maven-user-controller</artifactId>
       <version>1.0-SNAPSHOT</version>
     </dependency>
+-->
     <dependency>
       <groupId>org.codehaus.plexus</groupId>
       <artifactId>plexus-xwork-integration</artifactId>
