--- a/continuum-webapp/src/main/webapp/WEB-INF/web.xml
+++ b/continuum-webapp/src/main/webapp/WEB-INF/web.xml
@@ -146,4 +146,18 @@
     <taglib-uri>/tld/extremecomponents</taglib-uri>
     <taglib-location>/WEB-INF/extremecomponents.tld</taglib-location>
   </taglib>
+
+  <error-page>
+    <error-code>403</error-code>
+    <location>/error/error.jsp?id=403</location>
+  </error-page>
+  <error-page>
+    <error-code>404</error-code>
+    <location>/error/error.jsp?id=404</location>
+  </error-page>
+  <error-page>
+    <error-code>500</error-code>
+    <location>/error/error.jsp?id=500</location>
+  </error-page>
+
 </web-app>
