Change repo ids
git-svn-id: https://svn.apache.org/repos/asf/maven/continuum/branches/continuum-acegi@434421 13f79535-47bb-0310-9956-ffa450edef68

--- a/pom.xml
+++ b/pom.xml
@@ -75,7 +75,7 @@
   </modules>
   <repositories>
     <repository>
-      <id>codehaus-snapshots</id>
+      <id>codehaus.org</id>
       <name>Codehaus Snapshot Development Repository</name>
       <url>http://snapshots.repository.codehaus.org/</url>
       <releases>
@@ -83,7 +83,7 @@
       </releases>
     </repository>
     <repository>
-      <id>acegi-snapshot</id>
+      <id>acegisecurity.sourceforge.net</id>
       <name>Acegi snapshot repository</name>
       <url>http://acegisecurity.sourceforge.net/repository/snapshots</url>
       <releases>
