--- a/pom.xml
+++ b/pom.xml
@@ -40,7 +40,7 @@
     
     <scm>
         <connection>scm:svn:http://svn.apache.org/repos/asf/geronimo/gbuild/trunk/</connection>
-        <developerConnection>scm:svn:https://${maven.username}@svn.apache.org/repos/asf/geronimo/gbuild/trunk/</developerConnection>
+        <developerConnection>scm:svn:https://svn.apache.org/repos/asf/geronimo/gbuild/trunk/</developerConnection>
         <url>http://svn.apache.org/viewvc/geronimo/gbuild/trunk/</url>
     </scm>
     
