--- a/pom.xml
+++ b/pom.xml
@@ -54,6 +54,13 @@
           <version>1.3-SNAPSHOT</version>
           <extensions>true</extensions>
         </plugin>
+        <plugin>
+          <artifactId>maven-war-plugin</artifactId>
+          <version>2.0.2-20060829.202242-1</version>
+          <configuration>
+            <dependentWarExcludes>WEB-INF/lib/**</dependentWarExcludes>
+          </configuration>
+        </plugin>
       </plugins>
     </pluginManagement>
   </build>
@@ -93,9 +100,17 @@
   </repositories>
   <pluginRepositories>
     <pluginRepository>
-      <id>codehaus-snapshots</id>
+      <id>codehaus.org</id>
       <name>Codehaus Snapshot Development Repository</name>
       <url>http://snapshots.repository.codehaus.org/</url>
+      <releases>
+        <enabled>false</enabled>
+      </releases>
+    </pluginRepository>
+    <pluginRepository>
+      <id>apache.org</id>
+      <name>Apache Snapshot Repository</name>
+      <url>http://people.apache.org/repo/m2-snapshot-repository</url>
       <releases>
         <enabled>false</enabled>
       </releases>
@@ -425,6 +440,21 @@
         <groupId>org.codehaus.plexus</groupId>
         <artifactId>plexus-security-summit</artifactId>
         <version>1.0-alpha-3</version>
+      </dependency>
+      <dependency>
+        <groupId>commons-dbcp</groupId>
+        <artifactId>commons-dbcp</artifactId>
+        <version>1.2.1</version>
+        <exclusions>
+          <exclusion>
+            <groupId>xerces</groupId>
+            <artifactId>xercesImpl</artifactId>
+          </exclusion>
+          <exclusion>
+            <groupId>xml-apis</groupId>
+            <artifactId>xml-apis</artifactId>
+          </exclusion>
+        </exclusions>
       </dependency>
     </dependencies>
   </dependencyManagement>
