--- a/pom.xml
+++ b/pom.xml
@@ -58,7 +58,7 @@
           <artifactId>maven-war-plugin</artifactId>
           <version>2.0.2-20060829.202242-1</version>
           <configuration>
-            <dependentWarExcludes>WEB-INF/lib/**</dependentWarExcludes>
+            <dependentWarExcludes>WEB-INF/lib/**,WEB-INF/classes/**</dependentWarExcludes>
           </configuration>
         </plugin>
       </plugins>
